5.00/Test/syntax_errors/function_scope.c
int function (){

  // this is an error
  int x = 1 + 10 + int;

  // this is an error
  if 1
    printf("Hello World\n");


  // this is not an error
  printf("function call.\n");

  int x;
  int y;

  return 1;
}

int main (){

  function();

  return 0;
}
